--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "@fastify/cookie": "^6.0.0",
+    "@fastify/cors": "^7.0.0",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.17.3",
+    "fastify": "^3.29.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
