--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/cookie": "^6.0.0",
     "@fastify/cors": "^7.0.0",
+    "@fastify/swagger": "^6.0.1",
     "bcryptjs": "^2.4.3",
     "fastify": "^3.29.0",
     "jsonwebtoken": "^8.5.1"
